--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <div class="search-container">
       <div class="where">
         <p class="pp">Where</p>
-        <input id="search" type="text" placeholder="Where are you going">
+        <input [(ngModel)]="pretraga" id="search" type="text" placeholder="Where are you going">
       </div>
       <div class="when">
         <p class="pp">When</p>
@@ -55,82 +55,27 @@
     </div>
   </div>
 </div>
-<div class="content" style="margin-top: 5vh;">
-
-  <div class="row row-cols-3 g-4">
-    <div class="col">
-      <div class="card">
-        <img src="" class="card-img-top" alt="Hollywood Sign on The Hill">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This is a longer card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="" class="card-img-top" alt="Palm Springs Road">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This is a longer card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="" class="card-img-top" alt="Los Angeles Skyscrapers">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="" class="card-img-top" alt="Skyscrapers">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This is a longer card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="" class="card-img-top" alt="Skyscrapers">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This is a longer card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="" class="card-img-top" alt="Skyscrapers">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This is a longer card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.
-          </p>
-        </div>
-      </div>
-    </div>
+<div class="content" style="margin-top: 5vh;display: flex;flex-wrap: wrap;
+  justify-content: space-around;align-content: space-between;">
 
 
 
+  <div *ngFor="let property of getProperties()" class="card" style="margin-top:30px;">
+    <img src="" class="card-img-top" alt="{{ property.name }}" style="width: 100%;height: 200px;">
+    <div class="card-body" >
+      <h5 class="card-title">{{ property.name }}</h5>
+      <p class="card-text">
+        <strong>{{ property.city?.name }}, {{ property.city?.country?.name }}</strong><br>
+        Property Type: {{ property.propertyType?.name|| 'N/A' }}<br>
+        Address: {{ property.adress }}<br>
+        Price Per Night: {{ property.pricePerNight }}<br>
 
+      </p>
+    </div>
   </div>
+
+
+
+
+
 </div>
