--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -61,7 +61,7 @@
 
 
 
-  <div *ngFor="let property of getProperties()" class="card" style="margin-top:30px;">
+  <div *ngFor="let property of getProperties()" class="card" style="margin-top:30px; cursor:pointer;"  (click)="goToProperty()">
     <img src="" class="card-img-top" alt="{{ property.name }}" style="width: 100%;height: 200px;">
     <div class="card-body" >
       <h5 class="card-title">{{ property.name }}</h5>
