--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -1,180 +1,178 @@
 
 
+<div class="container-fluid">
+  <div class="row flex-nowrap">
+    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+      <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+        <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+          <span class="fs-5 d-none d-sm-inline">Menu</span>
+        </a>
+        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link align-middle px-0">
+              <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+            </a>
+          </li>
+          <li>
+            <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">My reservations</span> </a>
+            <!-- <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
+             <li class="w-100">
+               <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1 </a>
+             </li>
+             <li>
+               <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2 </a>
+             </li>
+           </ul> -->
+         </li>
+         <li>
+           <a href="#" class="nav-link px-0 align-middle">
+             <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Wishlist</span></a>
+         </li>
 
-<section id="korisnik" style="background-color: #eee;">
-  <div class="container py-5">
-
-
-    <div class="row">
-      <div class="col-lg-4">
-        <div class="card mb-4">
-          <div class="card-body text-center">
-            <img src="" alt="avatar"
-                 class="rounded-circle img-fluid" style="width: 180px;">
-            <h4 class="my-3">ime odabraniKorisnik</h4>
-            <p class="text-muted mb-1">username</p>
-
-          </div>
-        </div>
-
-
-      </div>
-      <div class="col-lg-8">
-        <div class="card mb-4">
-          <div class="card-body">
-            <div class="row">
-              <div class="col-sm-3">
-                <p class="mb-0">Full name</p>
-              </div>
-              <div class="col-sm-9">
-                <p class="text-muted mb-0">ime prezime</p>
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <p class="mb-0">Phone number</p>
-              </div>
-              <div class="col-sm-9">
-                <p class="text-muted mb-0">brojTelefona</p>
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <p class="mb-0">Email</p>
-              </div>
-              <div class="col-sm-9">
-                <p class="text-muted mb-0">email</p>
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <p class="mb-0">Birthday</p>
-              </div>
-              <div class="col-sm-9">
-                <p class="text-muted mb-0">birthdate</p>
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <p class="mb-0">date of registration</p>
-              </div>
-              <div class="col-sm-9">
-                <p class="text-muted mb-0">birthdate</p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-
+          <!-- <li>
+             <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+               <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
+             <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+               <li class="w-100">
+                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 1</a>
+               </li>
+               <li>
+                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
+               </li>
+               <li>
+                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
+               </li>
+               <li>
+                 <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
+               </li>
+             </ul>
+           </li>-->
+           <li>
+             <a href="#" class="nav-link px-0 align-middle">
+               <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">???</span> </a>
+           </li>
+         </ul>
+         <hr>
+         <div class="dropdown pb-4">
+           <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+             <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
+             <span class="d-none d-sm-inline mx-1">IME KORISNIKA</span>
+           </a>
+           <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+             <li><a class="dropdown-item" href="#">Settings</a></li>
+             <li>
+               <hr class="dropdown-divider">
+             </li>
+             <li><a  class="dropdown-item" routerLink="/login" *ngIf="myAuthService.jelLogiran()" (click)="logOut()">Sign out</a></li>
+           </ul>
+         </div>
+       </div>
+     </div>
+     <div class="col py-3">
 
 
 
 
-      <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <div class="accordion accordion-flush" id="accordionFlushExample1">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    ...
-                  </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample1">
-                  <div class="accordion-body">
 
 
 
-                  </div>
-                </div>
-              </div>
 
 
 
-            </div>
-          </div>
-
-          <div class="col-6">
-            <div class="accordion accordion-flush" id="accordionFlushExample2">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    ...
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample2">
-                  <div class="accordion-body">
 
 
 
-                  </div>
-                </div>
-              </div>
+
+
+  <section id="korisnik" style="background-color: #eee;">
+   <div class="container py-5">
+
+
+     <div class="row1">
+       <div class="col-lg-4">
+         <div class="card mb-4">
+           <div class="card-body text-center">
+             <img src="" alt="avatar"
+                  class="rounded-circle img-fluid" style="width: 180px;">
+             <h4 class="my-3">ime odabraniKorisnik</h4>
+             <p class="text-muted mb-1">username</p>
+
+           </div>
+         </div>
+
+
+       </div>
+       <div class="col-lg-8">
+         <div class="card mb-4">
+           <div class="card-body">
+             <div class="row">
+               <div class="col-sm-3">
+                 <p class="mb-0">Full name</p>
+               </div>
+               <div class="col-sm-9">
+                 <p class="text-muted mb-0">ime prezime</p>
+               </div>
+             </div>
+             <hr>
+             <div class="row">
+               <div class="col-sm-3">
+                 <p class="mb-0">Phone number</p>
+               </div>
+               <div class="col-sm-9">
+                 <p class="text-muted mb-0">brojTelefona</p>
+               </div>
+             </div>
+             <hr>
+             <div class="row">
+               <div class="col-sm-3">
+                 <p class="mb-0">Email</p>
+               </div>
+               <div class="col-sm-9">
+                 <p class="text-muted mb-0">email</p>
+               </div>
+             </div>
+             <hr>
+             <div class="row">
+               <div class="col-sm-3">
+                 <p class="mb-0">Birthday</p>
+               </div>
+               <div class="col-sm-9">
+                 <p class="text-muted mb-0">birthdate</p>
+               </div>
+             </div>
+             <hr>
+             <div class="row">
+               <div class="col-sm-3">
+                 <p class="mb-0">date of registration</p>
+               </div>
+               <div class="col-sm-9">
+                 <p class="text-muted mb-0">date of registration</p>
+               </div>
+             </div>
+
+           </div>
+         </div>
+       </div>
 
 
 
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="container mt-1">
-        <div class="row">
-          <div class="col-6">
-            <div class="accordion accordion-flush" id="accordionFlushExample3">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    ...
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample3">
-                  <div class="accordion-body">
 
 
 
-                  </div>
-                </div>
-              </div>
 
 
 
-            </div>
-          </div>
 
-          <div class="col-6">
-            <div class="accordion accordion-flush" id="accordionFlushExample4">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingFour">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                    ...
-                  </button>
-                </h2>
-                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample4">
-                  <div class="accordion-body">
+     </div>
+   </div>
+  </section>
 
 
 
-                  </div>
-                </div>
-              </div>
 
 
 
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-    </div>
+     </div>
+   </div>
   </div>
-</section>
