--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <div class="search-container">
       <div class="where">
         <p class="pp">Where</p>
-        <input [(ngModel)]="pretraga" id="search" type="text" placeholder="Where are you going">
+       <!-- <input [(ngModel)]="pretraga" id="search" type="text" placeholder="Where are you going">-->
       </div>
       <div class="when">
         <p class="pp">When</p>
@@ -57,11 +57,11 @@
   </div>
 </div>
 <div class="content" style="margin-top: 5vh;display: flex;flex-wrap: wrap;
-  justify-content: space-around;align-content: space-between;">
+  justify-content: center; width: 80%;margin-left: auto; margin-right: auto;">
 
 
 
-  <div *ngFor="let property of getProperties()" class="card" style="margin-top:30px; cursor:pointer;"  (click)="goToProperty()">
+  <div *ngFor="let property of getProperties()" class="card" style="flex: 1 1 calc(25% - 20px); max-width: 25%; margin: 10px;  cursor:pointer;"  (click)="goToProperty()">
     <img src="" class="card-img-top" alt="{{ property.name }}" style="width: 100%;height: 200px;">
     <div class="card-body" >
       <h5 class="card-title">{{ property.name }}</h5>
