updated property component

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <div class="search-container">
       <div class="where">
         <p class="pp">Where</p>
-       <!-- <input [(ngModel)]="pretraga" id="search" type="text" placeholder="Where are you going">-->
+       <input [(ngModel)]="pretraga" id="search" type="text" placeholder="Where are you going">
       </div>
       <div class="when">
         <mat-form-field class="rounded-form-field">
