--- a/frontend/src/app/property/property.component.html
+++ b/frontend/src/app/property/property.component.html
@@ -1,1 +1,131 @@
-<p>property works!</p>
+<div class="property-container">
+  <div class="top">
+    <button mat-button (click)="nazad()">
+      <div class="navigation">
+        <mat-icon>arrow_back</mat-icon>
+        <span>Nazad</span>
+      </div>
+    </button>
+  </div>
+  <!-- Property Name -->
+  <div class="property-header col-md-4 text-center mb-4">
+    <div class="col-md-4 property-name">
+      <h1>{{ property.name }}</h1>
+    </div>
+  </div>
+
+  <!-- Gallery -->
+  <div class="property-gallery mb-4">
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://placehold.co/800x400" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://placehold.co/800x400" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://placehold.co/800x400" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+  <!-- Property Details -->
+  <div class="property-details">
+    <div class="row">
+      <div class="col-md-6 mb-3">
+        <h5>Address</h5>
+        <p>{{ property.address }}</p>
+      </div>
+      <div class="col-md-6 mb-3">
+        <h5>City</h5>
+        <p>{{ property.city.name }}, {{ property.city.country.name }}</p>
+      </div>
+      <div class="col-md-6 mb-3">
+        <h5>Number of Rooms</h5>
+        <p>{{ property.numberOfRooms }}</p>
+      </div>
+      <div class="col-md-6 mb-3">
+        <h5>Number of Bathrooms</h5>
+        <p>{{ property.numberOfBathrooms }}</p>
+      </div>
+      <div class="col-md-6 mb-3">
+        <h5>Price Per Night</h5>
+        <p>{{ property.pricePerNight }} KM</p>
+      </div>
+      <div class="col-md-6 mb-3">
+        <h5>Property Type</h5>
+        <p>{{ property.propertyType.name }}</p>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <div class="card">
+          <div class="card-header">
+            <h1>{{ property.pricePerNight }} KM </h1>
+            <span>   night</span>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <mat-form-field class="rounded-form-field">
+                <mat-label>Check in - Check out</mat-label>
+                <mat-date-range-input [rangePicker]="picker">
+                  <input matStartDate placeholder="Start date">
+                  <input matEndDate placeholder="End date">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+              <label for="guests">GUESTS</label>
+              <select class="form-control" id="guests">
+                <option value="1">1 guest</option>
+                <option value="2">2 guests</option>
+                <option value="3">3 guests</option>
+              </select>
+            </div>
+            <button class="btn btn-primary btn-block">Reserve</button>
+            <div class="row mt-3">
+              <div class="col-md-6">
+                KM528 x {{ nights }} nights
+              </div>
+              <div class="col-md-6 text-right">
+                KM{{ (pricePerNight * nights) | number }}
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-md-6">
+                Total
+              </div>
+              <div class="col-md-6 text-right">
+                KM{{ getTotalPrice() | number }}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+</div>
+
+
+
