--- a/frontend/src/app/property/property.component.css
+++ b/frontend/src/app/property/property.component.css
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  font-size: 12px;
+  font-size: larger;
   text-transform: uppercase;
   font-weight: bold;
   color:#3A3A3A;
@@ -63,6 +63,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  height:600px;
 }
 
 .gallery-image {
@@ -90,12 +91,19 @@
   object-fit: cover;
 }
 
-.property-details h5 {
+.property-details{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.property-details h4{
   font-weight: bold;
 }
 
 .property-details p {
   margin-bottom: 1rem;
+  font-size: larger;
 }
 .card {
   border-radius: 10px;
@@ -122,3 +130,4 @@
 .form-group {
   margin-bottom: 15px;
 }
+
