--- a/frontend/src/app/property/property.component.html
+++ b/frontend/src/app/property/property.component.html
@@ -3,7 +3,7 @@
     <button mat-button (click)="nazad()">
       <div class="navigation">
         <mat-icon>arrow_back</mat-icon>
-        <span>Nazad</span>
+        <span>Back</span>
       </div>
     </button>
   </div>
@@ -18,52 +18,55 @@
   <div class="property-gallery mb-4">
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://placehold.co/800x400" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="https://placehold.co/800x400" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="https://placehold.co/800x400" class="d-block w-100" alt="...">
+        <div *ngFor="let image of property.PropertyImages; let i = index"
+             [class.carousel-item]="true"
+             [class.active]="i === 0">
+          <img [src]="image.ImageUrl" class="d-block w-100" alt="Property Image">
         </div>
       </div>
-      <a class="carousel-control-prev" href="#" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
   </div>
 
-  <!-- Property Details -->
+   <!-- Property Details -->
+  <div class="mb-5">
+    <p class="mb-0 fs-5 fw-semibold">{{ property.address }}</p>
+    <p class="mb-0 fs-5 fw-semibold">{{ property.city.name }}, {{ property.city.country.name }}</p>
+  </div>
+  <hr>
+  <div class="d-flex justify-content-around mt-5 mb-5"style="padding-bottom:50px;">
   <div class="property-details">
-    <div class="row">
-      <div class="col-md-6 mb-3">
-        <h5>Address</h5>
+
+    <div class="info-row">
+     <!-- <div class="col-md-6 mb-3">
+        <h2>Address</h2>
         <p>{{ property.address }}</p>
       </div>
       <div class="col-md-6 mb-3">
-        <h5>City</h5>
+        <h2>City</h2>
         <p>{{ property.city.name }}, {{ property.city.country.name }}</p>
-      </div>
-      <div class="col-md-6 mb-3">
-        <h5>Number of Rooms</h5>
+      </div>-->
+      <div class=" mb-3">
+        <h4>Number of Rooms</h4>
         <p>{{ property.numberOfRooms }}</p>
       </div>
-      <div class="col-md-6 mb-3">
-        <h5>Number of Bathrooms</h5>
+      <div class=" mb-3">
+        <h4>Number of Bathrooms</h4>
         <p>{{ property.numberOfBathrooms }}</p>
       </div>
-      <div class="col-md-6 mb-3">
-        <h5>Price Per Night</h5>
+      <div class=" mb-3">
+        <h4>Price Per Night</h4>
         <p>{{ property.pricePerNight }} KM</p>
       </div>
-      <div class="col-md-6 mb-3">
-        <h5>Property Type</h5>
+      <div class=" mb-3">
+        <h4>Property Type</h4>
         <p>{{ property.propertyType.name }}</p>
       </div>
     </div>
@@ -71,9 +74,9 @@
 
 
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 offset-md-2">
+
+    <div class="con"  style="width: 400px;">
+      <div class="col-md-8 "  style="width: 110%;">
         <div class="card">
           <div class="card-header">
             <h1>{{ property.pricePerNight }} KM </h1>
@@ -84,8 +87,8 @@
               <mat-form-field class="rounded-form-field">
                 <mat-label>Check in - Check out</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
-                  <input matStartDate placeholder="Start date">
-                  <input matEndDate placeholder="End date">
+                  <input matStartDate placeholder="Start date" [(ngModel)]="checkinDate" (ngModelChange)="onDateChange()">
+                  <input matEndDate placeholder="End date" [(ngModel)]="checkoutDate" (ngModelChange)="onDateChange()">
                 </mat-date-range-input>
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
@@ -93,7 +96,7 @@
             </div>
             <div class="form-group">
               <label for="guests">GUESTS</label>
-              <select class="form-control" id="guests">
+              <select class="form-control"  id="guests" [(ngModel)]="guests" (change)="getTotalPrice()">
                 <option value="1">1 guest</option>
                 <option value="2">2 guests</option>
                 <option value="3">3 guests</option>
@@ -102,11 +105,11 @@
             <button class="btn btn-primary btn-block">Reserve</button>
             <div class="row mt-3">
               <div class="col-md-6">
-                KM528 x {{ nights }} nights
+                KM {{property.pricePerNight}} x {{ nights }} nights
               </div>
-              <div class="col-md-6 text-right">
-                KM{{ (pricePerNight * nights) | number }}
-              </div>
+            <!--  <div class="col-md-6 text-right">
+                KM{{ (property.pricePerNight * nights* guests) | number }}
+              </div>-->
             </div>
             <hr>
             <div class="row">
@@ -114,18 +117,18 @@
                 Total
               </div>
               <div class="col-md-6 text-right">
-                KM{{ getTotalPrice() | number }}
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+                <!--  KM{{ getTotalPrice() | number }}-->
+                 KM  {{ (property.pricePerNight * nights* guests) | number }}
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
 
+   </div>
 
-
-</div>
+ </div>
 
 
 
